[package]
name = "crawler"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
duktape = { git = "https://github.com/kildevaeld/duktape-rs", features = ["value"] }
duktape_modules = { git = "https://github.com/kildevaeld/duktape-rs" }
duktape_stdlib = { git = "https://github.com/kildevaeld/duktape-rs" }
duktape_es2015 = { git = "https://github.com/kildevaeld/duktape-rs" }
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8.7"
url = { version = "^1.7.1" }
crossbeam-channel = "^0.3.0"
crossbeam = "^0.4.1"
url_serde = "^0.2.0"
reqwest = "^0.9.2"
log = "^0.4.6"
error-chain = "^0.12"
uuid = { version = "^0.7", features = ["serde", "v4"] }
value = { git = "https://github.com/kildevaeld/value-rs", features = ["datetime"] }